# usc-course-collector

./: Cargo.toml  README.md
src/: main.rs
