[package]
name = "web_scraper"
version = "0.1.0"
authors = ["Jeffrey Hertzog <jeffrey.hertzog@unity3d.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
select = "0.5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
